--- a/package.json
+++ b/package.json
@@ -32,19 +32,24 @@
     "@heroui/system": "2.4.15",
     "@heroui/tabs": "^2.2.16",
     "@heroui/theme": "2.4.15",
+    "@hookform/resolvers": "^5.0.1",
     "@iconify/react": "^6.0.0",
     "@react-aria/i18n": "^3.12.9",
     "@t3-oss/env-nextjs": "0.13.4",
     "@tanstack/react-query": "5.75.5",
     "@tanstack/react-query-devtools": "5.75.5",
+    "axios": "^1.9.0",
     "framer-motion": "12.10.2",
     "lucide-react": "0.508.0",
     "next": "15.3.2",
+    "next-intl": "^4.1.0",
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.56.4",
     "recharts": "^2.15.3",
-    "zod": "3.24.4"
+    "zod": "^3.25.31",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.1",
