--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "0.508.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
+    "next-qrcode": "^2.5.1",
     "next-themes": "0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
