feat: upgrade to tailwind v4

--- a/package.json
+++ b/package.json
@@ -20,18 +20,18 @@
     "test:ui": "playwright test --ui"
   },
   "dependencies": {
-    "@heroui/avatar": "^2.2.15",
-    "@heroui/badge": "^2.2.12",
-    "@heroui/button": "2.2.19",
-    "@heroui/card": "^2.2.18",
-    "@heroui/chip": "^2.2.15",
-    "@heroui/dropdown": "2.3.19",
-    "@heroui/navbar": "^2.2.17",
-    "@heroui/react": "^2.7.8",
-    "@heroui/spacer": "^2.2.14",
-    "@heroui/system": "2.4.15",
-    "@heroui/tabs": "^2.2.16",
-    "@heroui/theme": "2.4.15",
+    "@heroui/avatar": "^2.2.19",
+    "@heroui/badge": "^2.2.15",
+    "@heroui/button": "2.2.23",
+    "@heroui/card": "^2.2.22",
+    "@heroui/chip": "^2.2.19",
+    "@heroui/dropdown": "2.3.23",
+    "@heroui/navbar": "^2.2.21",
+    "@heroui/react": "^2.8.1",
+    "@heroui/spacer": "^2.2.17",
+    "@heroui/system": "2.4.19",
+    "@heroui/tabs": "^2.2.20",
+    "@heroui/theme": "2.4.19",
     "@hookform/resolvers": "^5.0.1",
     "@iconify/react": "^6.0.0",
     "@react-aria/i18n": "^3.12.9",
@@ -59,6 +59,7 @@
     "@ianvs/prettier-plugin-sort-imports": "4.4.1",
     "@next/eslint-plugin-next": "15.3.2",
     "@playwright/test": "1.52.0",
+    "@tailwindcss/postcss": "^4.1.11",
     "@tanstack/eslint-plugin-query": "5.74.7",
     "@total-typescript/ts-reset": "0.6.1",
     "@types/node": "22.15.16",
@@ -81,7 +82,7 @@
     "prettier": "3.5.3",
     "prettier-plugin-tailwindcss": "0.6.11",
     "sass": "1.87.0",
-    "tailwindcss": "3.4.17",
+    "tailwindcss": "4.1.11",
     "typescript": "5.8.3",
     "typescript-eslint": "8.32.0"
   },
