--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tanstack/react-query-devtools": "5.75.5",
     "axios": "^1.9.0",
     "framer-motion": "12.10.2",
+    "i18n-iso-countries": "^7.14.0",
     "lucide-react": "0.508.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
