--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "husky & playwright install",
     "dev": "next dev --turbopack",
     "build": "next build",
-    "preview": "next start",
+    "start": "node .next/standalone/server.js",
     "typecheck": "tsc --noEmit",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
