--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "axios": "^1.9.0",
     "framer-motion": "12.10.2",
     "i18n-iso-countries": "^7.14.0",
+    "iso-639-1": "^3.1.5",
     "lucide-react": "0.508.0",
     "next": "15.3.2",
     "next-intl": "^4.1.0",
