--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "license": "MIT",
   "author": {
     "name": "Perla code innovators",
-    "email": "contact@perla-it.com",
-    "url": "https://perla-it.com"
+    "email": "contact@wingman.com",
+    "url": "https://wingam.com"
   },
   "scripts": {
     "postinstall": "husky & playwright install",
     "dev": "next dev --turbopack",
+    "qa": "cross-env NODE_ENV=qa next dev --turbopack",
     "build": "next build",
-    "start": "node .next/standalone/server.js",
+    "build:qa": "cross-env NODE_ENV=qa next build",
+    "start": "next start",
     "typecheck": "tsc --noEmit",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -33,6 +35,7 @@
     "@heroui/system": "2.4.19",
     "@heroui/tabs": "^2.2.20",
     "@heroui/theme": "2.4.19",
+    "@heroui/toast": "^2.0.14",
     "@hookform/resolvers": "^5.0.1",
     "@iconify/react": "^6.0.0",
     "@react-aria/i18n": "^3.12.9",
@@ -69,6 +72,7 @@
     "@types/react": "19.1.3",
     "@types/react-dom": "19.1.3",
     "autoprefixer": "10.4.21",
+    "cpx": "^1.5.0",
     "cssnano": "7.0.7",
     "eslint": "9.26.0",
     "eslint-config-next": "15.3.2",
