--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@heroui/toast": "^2.0.14",
     "@hookform/resolvers": "^5.0.1",
     "@iconify/react": "^6.0.0",
+    "@internationalized/date": "^3.8.2",
     "@react-aria/i18n": "^3.12.9",
     "@t3-oss/env-nextjs": "0.13.4",
     "@tanstack/react-query": "5.75.5",
