--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 # Development Environment
 NODE_ENV=development
-NEXT_PUBLIC_API_BASE_URL=https://app.extraexpertise.be/api
+NEXT_PUBLIC_API_BASE_URL=https://dev.extraexpertise.be/api
